<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".view.activity.DetailsInexInfo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <!-- InEx Info Details -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="22dp"
            android:layout_marginBottom="300dp"
            android:background="@color/whiteColor"
            app:cardCornerRadius="10dp"
            app:cardElevation="4.5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="10">

                <!-- Title -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2.4">

                    <ImageView
                        android:id="@+id/icon_details"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        tools:src="@drawable/icon_salary" />

                    <TextView
                        android:id="@+id/title_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="27dp"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@+id/icon_details"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Salary" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@android:color/darker_gray" />

                <!-- Info -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7.6">

                    <!-- DATE -->
                    <!-- Title -->
                    <TextView
                        android:id="@+id/date_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/date_info"
                        android:textColor="@color/greyColor"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- Value -->
                    <TextView
                        android:id="@+id/date_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="115dp"
                        android:layout_marginTop="15dp"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="27-04-2020" />

                    <!-- CATEGORY -->
                    <!-- Title -->
                    <TextView
                        android:id="@+id/category_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/category_info"
                        android:textColor="@color/greyColor"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/date_title" />

                    <!-- Value -->
                    <TextView
                        android:id="@+id/inex_category_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="115dp"
                        android:layout_marginTop="15dp"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/date_value"
                        tools:text="Income" />

                    <!-- TOTAL -->
                    <!-- Title -->
                    <TextView
                        android:id="@+id/total_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/total_info"
                        android:textColor="@color/greyColor"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/category_title" />

                    <!-- Value -->
                    <TextView
                        android:id="@+id/total_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="115dp"
                        android:layout_marginTop="15dp"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/inex_category_value"
                        tools:text="Rp5.000.000" />

                    <!-- NOTES -->
                    <!-- Title -->
                    <TextView
                        android:id="@+id/notes_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/notes_info"
                        android:textColor="@color/greyColor"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/total_title" />

                    <!-- Value -->
                    <TextView
                        android:id="@+id/notes_value"
                        android:layout_width="225dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="115dp"
                        android:layout_marginTop="15dp"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/total_value"
                        tools:text="Gaji Bulanan" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Delete FAB -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_fab"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon_delete"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="280dp"
            app:fabCustomSize="50dp"
            app:tint="@color/whiteColor"
            app:backgroundTint="@color/deleteColor"
            app:borderWidth="0dp" />

        <!-- Edit FAB -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_fab"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon_edit"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="115dp"
            android:layout_marginBottom="280dp"
            app:fabCustomSize="50dp"
            app:tint="@color/whiteColor"
            app:backgroundTint="@color/editColor"
            app:borderWidth="0dp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>